--- a/superset/templates/appbuilder/general/security/reset_password_form.html
+++ b/superset/templates/appbuilder/general/security/reset_password_form.html
@@ -164,11 +164,7 @@
         </div> #}
         {# END: Add Back button #}
 
-        <div class="top-logos" {# style="margin-top: 20px;" #} > {# Conditionally add margin if back button is active #}
-            <img src="{{ url_for('static', filename='assets/images/crish/RDTL.svg') }}" alt="RDTL Logo">
-            <img src="{{ url_for('static', filename='assets/images/crish/MOH.png') }}" alt="CRISH Logo">
-            <img src="{{ url_for('static', filename='assets/images/crish/DNMG.svg') }}" alt="DNMG Logo">
-        </div>
+        {% include "appbuilder/general/security/_top_logos.html" %}
 
         <h3 class="crish-heading">{{ title }}</h3>
 
@@ -199,11 +195,7 @@
             </div>
         </div>
 
-        <div class="bottom-logos">
-           <img src="{{ url_for('static', filename='assets/images/crish/GCF.svg') }}" alt="Green Climate Fund Logo">
-           <img src="{{ url_for('static', filename='assets/images/crish/UNEP.svg') }}" alt="UN Environment Programme Logo">
-           <img src="{{ url_for('static', filename='assets/images/crish/RIMES.svg') }}" alt="RIMES Logo">
-        </div>
+        {% include "appbuilder/general/security/_bottom_logos.html" %}
 
     </div> {# End .login-container #}
 </div> {# End .login-body-container #}
