fixed bug on including the logo templates

--- a/superset/templates/appbuilder/general/security/register_user.html
+++ b/superset/templates/appbuilder/general/security/register_user.html
@@ -226,7 +226,7 @@
         </div>
         {# END: Add Back button #}
 
-         {% include "appbuilder/general/security/_top_logos.html" with add_top_logos_margin_top=true %}
+         {% include "appbuilder/general/security/_top_logos.html" add_top_logos_margin_top=true %}
 
         <h3 class="crish-heading">{{ _("Register for an Account") }}</h3>
 
