--- a/superset/templates/appbuilder/general/security/forgot_password_form.html
+++ b/superset/templates/appbuilder/general/security/forgot_password_form.html
@@ -163,7 +163,7 @@
         </div>
         {# END: Add Back button #}
 
-        {% include "appbuilder/general/security/_top_logos.html" with add_top_logos_margin_top=true %}
+        {% include "appbuilder/general/security/_top_logos.html" add_top_logos_margin_top=true %}
 
         <h3 class="crish-heading">{{ title }}</h3>
 
