--- a/superset/templates/appbuilder/general/security/login_db.html
+++ b/superset/templates/appbuilder/general/security/login_db.html
@@ -1,5 +1,10 @@
 {% extends "appbuilder/base.html" %} {# Extend original FAB base #}
 
+{% block head_css %}
+    {{ super() }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+{% endblock %}
+
 {% block content %}
 <style>
   /* Apply gradient to html/body to ensure full coverage */
@@ -128,6 +133,7 @@
   }
   .input-group {
      width: 100%;
+     position: relative; /* Ensure this is a positioning context for the icon */
   }
 
   /* Remove default help block */
@@ -184,8 +190,16 @@
    /* Style for the CRISH heading */
    .crish-heading {
        text-align: center;
-       margin-bottom: 25px; /* Add space below the heading */
+       /* margin-bottom: 25px; Add space below the heading */
        font-size: 2em; /* Make it a bit larger */
+       color: #333; /* Dark grey color */
+       font-weight: bold;
+   }
+
+   .crish-subheading {
+       text-align: center;
+       margin-bottom: 25px; /* Add space below the heading */
+       font-size: 1.25em; /* Make it a bit larger */
        color: #333; /* Dark grey color */
        font-weight: bold;
    }
@@ -195,6 +209,20 @@
        0% { background-position: 0% 50%; }
        50% { background-position: 100% 50%; }
        100% { background-position: 0% 50%; }
+   }
+
+   #togglePassword {
+       display: inline-block !important;
+       position: absolute !important;
+       right: 10px !important;
+       top: 50% !important;
+       transform: translateY(-50%) !important;
+       z-index: 100 !important;
+       width: 22px !important; /* Adjusted for typical icon size + padding */
+       height: 22px !important; /* Adjusted for typical icon size + padding */
+       line-height: 22px !important; /* For vertical icon alignment */
+       text-align: center !important; /* Ensure icon is centered within the span */
+       /* border: 1px solid red !important; */ /* Uncomment for debugging visibility */
    }
 
 </style>
@@ -208,6 +236,9 @@
 
         {# Add the CRISH heading here #}
         <h3 class="crish-heading">CRISH</h3>
+        {# Add meaning of CRISH#}
+        <h4 class="crish-subheading">Climate Risk Information System for Public Health</h4>
+        <br />
 
         {# This is the original FAB login box structure, we'll style it #}
         <div id="loginbox" class="mainbox"> {# Removed col-* classes #}
@@ -230,7 +261,10 @@
                          <div class="form-group">
                             <label class="control-label" for="password">{{_("Password")}}</label> {# Use target label text #}
                             <div class="input-group"> {# Keep structure for form field macro #}
-                                {{ form.password(class = "form-control", placeholder='Enter your password') }} {# Use target placeholder #}
+                                {{ form.password(class = "form-control", placeholder='Enter your password', style="padding-right: 40px;") }} {# Use target placeholder, add padding for icon #}
+                                <span id="togglePassword" style="cursor: pointer;">
+                                    <i class="fa fa-eye"></i>
+                                </span>
                             </div>
                         </div>
 
@@ -259,4 +293,30 @@
 
     </div> {# End .login-container #}
 </div> {# End .login-body-container #}
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const passwordInput = document.querySelector('input[name="password"]');
+    const togglePassword = document.getElementById('togglePassword');
+    const passwordIcon = togglePassword.querySelector('i');
+
+    if (passwordInput && togglePassword) {
+        togglePassword.addEventListener('click', function() {
+            // Toggle the type
+            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordInput.setAttribute('type', type);
+            
+            // Toggle the icon
+            if (type === 'password') {
+                passwordIcon.classList.remove('fa-eye-slash');
+                passwordIcon.classList.add('fa-eye');
+            } else {
+                passwordIcon.classList.remove('fa-eye');
+                passwordIcon.classList.add('fa-eye-slash');
+            }
+        });
+    }
+});
+</script>
+
 {% endblock %}
