updated bulletins api to take query parameters, minor ui updates, updated geojson

--- a/superset/templates/appbuilder/general/security/_top_logos.html
+++ b/superset/templates/appbuilder/general/security/_top_logos.html
@@ -1,18 +1,17 @@
 <style>
   .top-logos {
-    align-items: flex-end;
+    align-items: center;
   }
 
   /*
-    Specific style for RDTL logo to be bigger and elevated.
-    The .top-logos class is set to align items to the bottom (flex-end).
-    The taller RDTL logo will already appear higher.
-    A positive `bottom` value with `position: relative` elevates it further.
+    Specific style for RDTL logo to be bigger.
+    The .top-logos class uses align-items: center to vertically align logos.
   */
   .top-logos img.logo-rdtl {
     height: 120px; /* Default for other top logos is usually 60px */
     position: relative;
-    bottom: 20px;
+    bottom: 6px;
+    right: 9px;
   }
 </style>
 
