Update login page design

--- a/superset/templates/appbuilder/general/security/_bottom_logos.html
+++ b/superset/templates/appbuilder/general/security/_bottom_logos.html
@@ -4,3 +4,4 @@
    <img src="{{ url_for('static', filename='assets/images/crish/UNEP.svg') }}" alt="UN Environment Programme Logo">
    <img src="{{ url_for('static', filename='assets/images/crish/RIMES.svg') }}" alt="RIMES Logo">
 </div> 
+<p style="color: rgb(107, 114, 128); font-size: 0.75rem;">Supported by UN Environment Programme, RIMES, and Green Climate Fund</p>
