--- a/superset/templates/appbuilder/general/security/reset_password_form.html
+++ b/superset/templates/appbuilder/general/security/reset_password_form.html
@@ -44,10 +44,10 @@
 
   .top-logos, .bottom-logos {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 24px;
-    flex-wrap: wrap;
+    gap: 1rem;
+    margin-bottom: 1rem;
   }
 
    .top-logos img, .top-logos span {
