--- a/superset/templates/appbuilder/general/security/forgot_password_form.html
+++ b/superset/templates/appbuilder/general/security/forgot_password_form.html
@@ -31,11 +31,11 @@
   }
 
   .login-container {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 40px;
     border-radius: 12px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
+    max-width: 500px;
     width: 100%;
     text-align: center;
     overflow: hidden;
@@ -44,10 +44,10 @@
 
   .top-logos, .bottom-logos {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 24px;
-    flex-wrap: wrap;
+    gap: 1rem;
+    margin-bottom: 1rem;
   }
 
    .top-logos img, .top-logos span {
@@ -56,9 +56,9 @@
    }
 
   .bottom-logos img {
-    height: 60px;
-    margin: 10px 10px;
-    opacity: 0.8;
+    height: 45px;
+    /* margin: 10px 10px;
+    opacity: 0.8; */
   }
 
   #loginbox { /* Changed from .panel to #loginbox to match other forms */
@@ -122,7 +122,7 @@
   }
 
   .btn-primary {
-    background-color: #007bff;
+    background: linear-gradient(to right, rgb(79, 70, 229), rgb(168, 85, 247));
     border: none;
     color: white;
     padding: 12px 20px;
@@ -140,7 +140,7 @@
    .crish-heading {
        text-align: center;
        margin-bottom: 25px;
-       font-size: 2em;
+       font-size: 20px;
        color: #333;
        font-weight: bold;
    }
