--- a/superset/templates/appbuilder/general/security/widgets/register_form_widget.html
+++ b/superset/templates/appbuilder/general/security/widgets/register_form_widget.html
@@ -1,9 +1,12 @@
 {% import 'appbuilder/general/lib.html' as lib %}
 
-{% set begin_sep_label = '<td class="col-lg-2">' %}
-{% set end_sep_label = '</td>' %}
-{% set begin_sep_field = '<td>' %}
-{% set end_sep_field = '</td>' %}
+{# This macro renders a form field with its label positioned above the input. #}
+{% macro render_field_stacked(field) %}
+    <div class="form-group">
+        <label for="{{ field.id }}" class="form-label">{{ field.label.text }}</label>
+        {{ field(class="form-control") }}
+    </div>
+{% endmacro %}
 
 
 {% if form_action is defined %}
@@ -21,34 +24,182 @@
                 {% set expanded = fieldset_item[1].get('expanded') %}
             {% endif %}
             {% call lib.accordion_tag(loop.index,fieldset_item[0], expanded) %}
-            <div class="table-responsive">
-                <table class="table table-responsive table-bordered">
-                    {% for item in fieldset_item[1].get('fields') %}
-                        {% if item not in exclude_cols %}
-                            <tr>
-                                {{ lib.render_field(form[item], begin_sep_label, end_sep_label, begin_sep_field, end_sep_field) }}
-                            </tr>
-                        {% endif %}
-                    {% endfor %}
-                </table>
+            
+            {# Start a new row for each logical pair or single full-width field #}
+            <div class="row">
+                {# Username is on its own row #}
+                <div class="col-md-12 mb-3">
+                    {{ render_field_stacked(form.username) }}
+                </div>
+            </div>
+            <div class="row">
+                {# First Name and Last Name are side by side #}
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.first_name) }}
+                </div>
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.last_name) }}
+                </div>
+            </div>
+            <div class="row">
+                {# Position and Contact Number are side by side #}
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.position) }}
+                </div>
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.contact_number) }}
+                </div>
+            </div>
+            <div class="row">
+                {# Gender Preference and Age Category are side by side #}
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.gender_preference) }}
+                </div>
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.age_category) }}
+                </div>
+            </div>
+            <div class="row">
+                {# Has Disability is on a half-width column #}
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.has_disability) }}
+                </div>
+            </div>
+            <div class="row">
+                {# The disability_type container takes a full row #}
+                <div class="col-md-12 mb-3" id="disability_type_container" style="display: none;">
+                    <div class="form-group">
+                        <label class="form-label">{{ form['disability_type'].label.text }}</label>
+                        <div class="d-flex flex-wrap gap-3" >
+                            {# FIXED: Removed the ID from the inner divs #}
+                            {% for subfield in form['disability_type'] %}
+                                <div class="form-check form-check-inline">
+                                    {{ subfield(class="form-check-input") }}
+                                    <label class="form-check-label" for="{{ subfield.id }}">{{ subfield.label.text }}</label>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                {# Email is on its own row #}
+                <div class="col-md-12 mb-3">
+                    {{ render_field_stacked(form.email) }}
+                </div>
+            </div>
+            <div class="row">
+                {# Password and Confirm Password are side by side #}
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.password) }}
+                </div>
+                <div class="col-md-6 mb-3">
+                    {{ render_field_stacked(form.conf_password) }}
+                </div>
+            </div>
+            <div class="row">
+                {# Recaptcha is on its own row #}
+                <div class="col-md-12 mb-3">
+                    {{ form.recaptcha }}
+                </div>
             </div>
             {% endcall %}
         {% endfor %}
     {% else %}
-        <div class="table-responsive">
-            <table class="table table-bordered">
-                {% for col in include_cols %}
-                    {% set field = form[col] %}
-                    {% if field.name not in exclude_cols %}
-                        <tr>
-                            {{ lib.render_field(field, begin_sep_label, end_sep_label, begin_sep_field, end_sep_field) }}
-                        </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
+        {# This section is a simplified version of the above, in case fieldsets are not used #}
+        <div class="row">
+            <div class="col-md-12 mb-3">
+                {{ render_field_stacked(form.username) }}
+            </div>
         </div>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.first_name) }}
+            </div>
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.last_name) }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.position) }}
+            </div>
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.contact_number) }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.gender_preference) }}
+            </div>
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.age_category) }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.has_disability) }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 mb-3" id="disability_type_container" style="display: none;">
+                <div class="form-group">
+                    <label class="form-label">{{ form['disability_type'].label.text }}</label>
+                    <div class="d-flex flex-wrap gap-3" id="disability_type">
+                        {% for subfield in form['disability_type'] %}
+                            <div class="form-check form-check-inline" id="disability_type">
+                                {{ subfield(class="form-check-input") }}
+                                <label class="form-check-label" for="{{ subfield.id }}">{{ subfield.label.text }}</label>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 mb-3">
+                {{ render_field_stacked(form.email) }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.password) }}
+            </div>
+            <div class="col-md-6 mb-3">
+                {{ render_field_stacked(form.conf_password) }}
+            </div>
+        </div>
+        <!-- <div class="row">
+            <div class="col-md-12 mb-3">
+                {{ form.recaptcha }}
+            </div>
+        </div> -->
     {% endif %}
 
     {# Include your custom controls template for registration #}
     {% include 'appbuilder/general/security/widgets/register_form_controls.html' %}
-</form> 
+</form>
+
+<script>
+    // This script will make the disability options appear/disappear
+    $(document).ready(function() {
+        const $hasDisabilitySelect = $('#has_disability');
+        const $disabilityTypeContainer = $('#disability_type_container');
+
+        if ($hasDisabilitySelect.length === 0 || $disabilityTypeContainer.length === 0) {
+            console.warn('Could not find the necessary fields for disability dynamic logic.');
+            return;
+        }
+
+        function toggleDisabilityType() {
+            if ($hasDisabilitySelect.val() === 'Yes') {
+                $disabilityTypeContainer.show();
+            } else {
+                $disabilityTypeContainer.hide();
+            }
+        }
+
+        toggleDisabilityType();
+        $hasDisabilitySelect.on('change', toggleDisabilityType);
+    });
+</script>
