--- a/superset/templates/superset/flash_wrapper.html
+++ b/superset/templates/superset/flash_wrapper.html
@@ -16,6 +16,36 @@
   specific language governing permissions and limitations
   under the License.
 #}
+<style>
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden; /* Prevents scrollbars from appearing */
+    }
+
+    #background-image-container {
+      position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 1;
+    z-index: -1;
+    }
+
+    #background-image-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ensures the image covers the entire container without distortion */
+    }
+</style>
+
+<div id="background-image-container">
+    <img src="{{ url_for('static', filename='assets/images/crish/background.png') }}" alt="Background Image">
+</div>
+
 <div id="alert-container">
     {% include 'appbuilder/flash.html' %}
 </div>
