--- a/superset/templates/superset/flash_wrapper.html
+++ b/superset/templates/superset/flash_wrapper.html
@@ -21,7 +21,7 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        overflow: hidden; /* Prevents scrollbars from appearing */
+        /* overflow: hidden;  */
     }
 
     #background-image-container {
